# biosample-xmldb-sqldb

./: .gitignore  LICENSE  Makefile  README.md  addressbook.xml  biosample_with_curation.xml  biosample_with_synonym.xml  curl_biosample_xml_examples.txt  old.Makefile  pyproject.toml  streaming_index.txt
assets/: PRJNA656268_attribute_name.tsv  PRJNA656268_harmonized_names.tsv  biosample_set_from_0-index.txt  biosample_with_table.xml  path_counts.yaml
biosample_xmldb_sqldb/: BATCHWISE.py  biosample_xml_to_relational.py  count_paths.py  introspect.py  minimal.py  path_counts.yaml  pivot_bisample_id_chunks.py  pivot_harmonized_attribs.py  pivot_harmonized_attributes.py  split_into_N_biosamples.py  stream_and_write.py  streaming_pivot_bisample_id_chunks.py
biosample_xmldb_sqldb/old/: biosample_from_bioproject.py  pivot_bisample_id_chunks.py  pivot_from_bp_id.py  stream_and_write.py
biosample_xmldb_sqldb/optional_basex_load_prep/: split_into_N_biosamples.py
docs/: README.md
docs/how-to/: README.md  load-data-from-dtn01-into-spin.md
local/: .env.template
shared-queries/: all_biosample_attributes_values_by_raw_id.xq
sql/: Script.sql  all-ncbi-attributes-long.sql  all_attribs.sql  create_view.sql  experimental-factor-fts-query.sql  fts.sql  non-attribute-metadata.sql  non_attribute_metadata.sql  post-pivot-view.sql  sample-fts-query.sql  scrapbook.sql  setup.sql
sql/old/: all-ncbi-attributes-long-fts.sql  all-ncbi-attributes-long-idx.sql
